# pdf-extractor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/model/: model.py
app/routers/: routes.py  scheduler.py
app/utils/: auth.py  database.py  parser.py
init-scripts/: init-db.sql
